# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.33.5
	Martin Väth <martin at mvath.de>:
	- New search options --{available,installed}-{deps,{,r,p,b}depend}
	- handle installed deps even without DEP
	- do not let installed deps default to available deps if DEPS_INSTALLED
	- manpage: add a missing occurrence of BDEPEND

*eix-0.33.4
	Martin Väth <martin at mvath.de>:
	- Bugfix: eix-update: set reponame in version to correctly apply
	  package.mask from overlays https://bugs.gentoo.org/658658
	- Bugfix: do not treat leading * in system entries as part of pattern
	- Bugfix: Read vars like EAPI also with ONLY_KEYWORDS_SLOT.
	  This fixes cache method ebuild* for non-first versions of a package,
	  see https://github.com/vaeth/eix/issues/52
	- Use a variant of Levenshtein (Hirschberg) which requires less memory
	- zsh completion: Use standard style; use eix --format; simplify
	- Minor code simplification

*eix-0.33.3
	Martin Väth <martin at mvath.de>:
	- Rename hdepend->bdepend (EAPI=7)
	- Add configure options --with-eix-{user,group,uid,gid}
	- Fix configure test for emplace_back test to include vector<bool>
	  and prepend (not append) dialect flags when testing for consistency
	  with later usage, see https://bugs.gentoo.org/show_bug.cgi?id=649558
	- Add contrib/iwyu.sh experimentally
	- Include README.md, eix.png into distribution
	- Configure diag for -Wsuggest-final-methods -Wgnu-statement-expression
	- Until a good test is known, do not add -fno-plt: it breaks with clang
	- eix-functions.sh: Fix npgettext lookup test.
	- eix-functions.sh: Fix {eval_,}ngettext fallback: 0 has plural form
	- Update compiler-flags (e.g. include gcc-8)
	- meson.buid: Unify flag adding
	- Add dummy initialization to avoid gcc-8 false positive warning
	- Add ATTRIBUTE_NONNULL_ to template specialications

*eix-0.33.2
	Martin Väth <martin at mvath.de>:
	- Bugfix: Fix typo in FORMATLINE_BEST (I18N_BESTVERSIONSSLOT) which